--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,36 @@
 @import "tailwindcss";
-
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+  margin: 0;
+  padding: 0;
+
+}
+a{
+  text-decoration: none;
+  
+}
+body, html {
+  background-color: #f9fafb;
+  min-height: 100vh;
+}
+
+/* App bar */
+
+@media (min-width: 600px) {
+  .css-yg49xf-MuiToolbar-root {
+      padding-left:15px;
+      padding-right: 24px;
+  }
+
+}
+
+.header-toggler{
+  color: oklch(.546 .245 262.881);
+  cursor: pointer;
+  display: inline-block;
+  float: left;
+  font-size: 1.75rem;
+  line-height: 32px;
+}
