--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ a{
 body, html {
   background-color: #f9fafb;
   min-height: 100vh;
+   overflow-x: hidden; /* Prevents horizontal scrolling */
 }
 
 /* App bar */
@@ -33,4 +34,25 @@ body, html {
   float: left;
   font-size: 1.75rem;
   line-height: 32px;
+}
+
+.wave-animation {
+  animation: moveWave 5s infinite linear;
+}
+
+@keyframes moveWave {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+.service-icon {
+  font-weight: 100 !important;
+  display: flex;
+  justify-content: center;
+}
+.service-icon svg {
+  font-size: 40px !important;
 }
